# KickAss

./: CMakeLists.txt  character.h  control.h  game.h  hyper_c.h  main.c  sdl.h  sprite.h
collections/: iteration.h  list.h  map.h  safe_array.h
hyper_c/: concatenation.h  definition.h  macros.h  usage.h
systems/ai/: ai.h
systems/attack/: attack.h  attacking.h
systems/collision/: collider.h  collision.h
systems/generation/: generation.h
systems/health/: health.h  health_system.h
systems/input/: input.h
systems/movement/: movable.h  movement.h
systems/output/: output.h  sprite.h
systems/placing/: position.h
systems/sound/: sound.h
tools/: math.h  string.h  vector.h
